[gd_scene load_steps=4 format=3 uid="uid://beac5bx4ijx3c"]

[ext_resource type="Script" uid="uid://byv5cfc5yf7vg" path="res://examples/module2_nodes_and_scenes/M2_05_Signals_Example/button_emitter.gd" id="1_emitter_script"]
[ext_resource type="Script" uid="uid://cb06x0hgc8uqd" path="res://examples/module2_nodes_and_scenes/M2_05_Signals_Example/label_receiver.gd" id="2_receiver_script"]
[ext_resource type="Script" uid="uid://dg06a0r3ym05e" path="res://examples/module2_nodes_and_scenes/M2_05_Signals_Example/signals_demo.gd" id="3_main_logic"]

[node name="SignalsDemoMain" type="Node2D"]
script = ExtResource("3_main_logic")

[node name="Instructions" type="Label" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 480.0
offset_bottom = 70.0
text = "点击下面的按钮：
- '编辑器连接按钮' 通过编辑器连接信号。
- '代码连接按钮' 通过代码连接信号。
- 'Lambda按钮' 通过代码和Lambda表达式连接信号。"
autowrap_mode = 2

[node name="ButtonContainer" type="VBoxContainer" parent="."]
offset_left = 11.0
offset_top = 152.0
offset_right = 211.0
offset_bottom = 272.0

[node name="EditorConnectedButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
text = "编辑器连接按钮"
script = ExtResource("1_emitter_script")

[node name="CodeConnectedButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
text = "代码链接按钮"
autowrap_mode = 2
clip_text = true
script = ExtResource("1_emitter_script")

[node name="LambdaButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
text = "lambda_button"

[node name="ReceiverLabel" type="Label" parent="."]
offset_left = 13.0
offset_top = 265.0
offset_right = 435.0
offset_bottom = 413.0
text = "等待信号..."
script = ExtResource("2_receiver_script")

[node name="LambdaInfoLabel" type="Label" parent="."]
offset_left = 250.0
offset_top = 190.0
offset_right = 550.0
offset_bottom = 230.0
text = "Lambda按钮信息将显示在这里"
autowrap_mode = 2

[connection signal="button_event_fired" from="ButtonContainer/EditorConnectedButton" to="ReceiverLabel" method="on_editor_connected_event"]
